--- a/bare_jrnl_new_sample4.tex
+++ b/bare_jrnl_new_sample4.tex
@@ -26,23 +26,21 @@
 
 \author{Harith Al-Safi, Harith Ibrahim and Paul Steenson, \IEEEmembership{Senior Member, IEEE}
         % <-this % stops a space
-\thanks{Manuscript received 30 August 2023; revised 10 December 2023
-and 18 January 2024; accepted 13 February 2024. Date of publication
-19 February 2024; date of current version 23 May 2024. This work was supported in part by the school of Electronics and Electrical Engineering at the University of Leeds.} 
-\thanks{All authors are with the School of Electronics and Electrical Engineering, University of Leeds, Leeds, LS2 9JT, UK. Corresponding author e-mail: harith.alsafi@gmail.com}}
+\thanks{This work was supported in part by the school of Electronics and Electrical Engineering at the University of Leeds.}% <-this % stops a space
+\thanks{Manuscript received April 19, 2021; revised August 16, 2021.}}
 
 % The paper headers
 \markboth{Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2021}%
 {Shell \MakeLowercase{\textit{et al.}}: A Sample Article Using IEEEtran.cls for IEEE Journals}
 
-\IEEEpubid{0000--0000/00\$00.00~\copyright~2021 IEEE}
+% \IEEEpubid{0000--0000/00\$00.00~\copyright~2021 IEEE}
 % Remember, if you use this you must call \IEEEpubidadjcol in the second
 % column for its text to clear the IEEEpubid mark.
 
 \maketitle
 
 \begin{abstract}
-  Large language models (LLMs) have revolutionized natural language processing (NLP), yet their potential in Internet of Things (IoT) and embedded systems (ESys) applications remains largely unexplored. Traditional IoT interfaces often require specialized knowledge, creating barriers for non-technical users. We present Vega a modular system that leverages LLMs to enable intuitive, natural language control and interrogation of IoT devices, specifically a Raspberry Pi (RPi) connected to various sensors, actuators and devices. Our solution comprises three key components: a physical circuit with input and output devices, an RPi integrating a control server, and a web application integrating LLM logic using multi-agents. Users interact with the system through natural language, which the LLM interprets to remotely call appropriate commands for the RPi. The RPi executes these instructions on the physically connected circuit, with outcomes communicated back to the user via LLM-generated responses. The system's performance is empirically evaluated using a range of task complexities and user scenarios, demonstrating its ability to handle complex and conditional logic without additional coding on the RPi reducing the need for extensive programming on IoT devices. We showcase the system's real-world applicability through physical circuit implementation, while providing insights into its limitations and potential scalability. Our findings reveal that LLM-driven IoT control can effectively bridge the gap between complex device functionality and user-friendly interaction, and also opens new avenues for creative and intelligent IoT applications. This research offers insights into the design and implementation of LLM-integrated IoT interfaces and is showcased in the following link \url{https://youtu.be/CKV\_\_A8G5Rk}
+  Large language models (LLMs) have revolutionized natural language processing (NLP), yet their potential in Internet of Things (IoT) and embedded systems (ESys) applications remains largely unexplored. Traditional IoT interfaces often require specialized knowledge, creating barriers for non-technical users. We present Vega a modular system that leverages LLMs to enable intuitive, natural language control and interrogation of IoT devices, specifically a Raspberry Pi (RPi) connected to various sensors, actuators and devices. Our solution comprises three key components: a physical circuit with input and output devices, an RPi integrating a control server, and a web application integrating LLM logic. Users interact with the system through natural language, which the LLM interprets to remotely call appropriate commands for the RPi. The RPi executes these instructions on the physically connected circuit, with outcomes communicated back to the user via LLM-generated responses. The system's performance is empirically evaluated using a range of task complexities and user scenarios, demonstrating its ability to handle complex and conditional logic without additional coding on the RPi reducing the need for extensive programming on IoT devices. We showcase the system's real-world applicability through physical circuit implementation, while providing insights into its limitations and potential scalability. Our findings reveal that LLM-driven IoT control can effectively bridge the gap between complex device functionality and user-friendly interaction, and also opens new avenues for creative and intelligent IoT applications. This research offers insights into the design and implementation of LLM-integrated IoT interfaces and is showcased in the following link \url{https://youtu.be/CKV\_\_A8G5Rk}
 \end{abstract}
 
 \begin{IEEEkeywords}
@@ -54,17 +52,12 @@ Large language models (LLMs) have significantly revolutionized natural language 
 
 Traditional IoT interfaces typically rely on graphical user interfaces (GUIs) or specific programming languages, which can be challenging for users to develop without technical expertise \cite{10.1145/3447526.3472036}. This limitation hinders the widespread adoption and utilization of IoT technologies, particularly in scenarios where rapid deployment and intuitive user interaction are crucial. While research has been conducted on natural language interfaces for IoT, the application of advanced language models to IoT control and interaction remains an unexplored area \cite{KASSAB2020102663}.
 
-To address these challenges, we propose \textbf{Vega}, an intelligent chatbot platform that leverages LLMs to enable intuitive, natural language control of IoT devices. Our system focuses on a Raspberry Pi (RPi) connected to various sensors and devices as a representative IoT setup. By integrating LLMs with IoT infrastructure, we aim to bridge the gap between complex device functionality and user-friendly interaction, allowing users to control and query IoT systems using everyday language. 
+To address these challenges, we propose \textbf{Vega}, an intelligent chatbot platform that leverages LLMs to enable intuitive, natural language control of IoT devices. Our system focuses on a Raspberry Pi (RPi) connected to various sensors and devices as a representative IoT setup. By integrating LLMs with IoT infrastructure, we aim to bridge the gap between complex device functionality and user-friendly interaction, allowing users to control and query IoT systems using everyday language. Our research builds upon recent advancements in LLMs, specifically OpenAI's GPT-based models \cite{OpenAI_GPT}, which utilize transformer neural network architectures to capture context and relationships within text data. By applying these powerful language understanding capabilities to IoT interaction, we aim to create a more accessible and flexible approach to device control and monitoring. Our approach, addressing the standardization challenges highlighted by \citet{7821686}, not only enhances accessibility for non-technical users but also opens new avenues for creative and intelligent IoT applications.
 
-Our research builds upon recent advancements in LLMs, specifically OpenAI's GPT-based models \cite{OpenAI_GPT}, which utilize transformer neural network architectures to capture context and relationships within text data. By applying these powerful language understanding capabilities to IoT interaction, we aim to create a more accessible and flexible approach to device control and monitoring. Our approach, addressing the standardization challenges highlighted by \citet{7821686}, not only enhances accessibility for non-technical users but also opens new avenues for creative and intelligent IoT applications.
-
-Vega's architecture comprises three key components: a physical circuit with input and output devices, an RPi integrating a control server, and a web application incorporating LLM logic. This modular design allows for flexibility and scalability, enabling the system to adapt to various IoT scenarios and user requirements \cite{taylor2010software}. By utilizing the RPi as a central hub, we can leverage its versatility and widespread adoption in the IoT community \cite{8067944}. 
-
-The main contributions of this paper are as follows:
+Vega's architecture comprises three key components: a physical circuit with input and output devices, an RPi integrating a control server, and a web application incorporating LLM logic. This modular design allows for flexibility and scalability, enabling the system to adapt to various IoT scenarios and user requirements \cite{taylor2010software}. By utilizing the RPi as a central hub, we can leverage its versatility and widespread adoption in the IoT community \cite{8067944}. The main contributions of this paper are as follows:
 
 \begin{enumerate}
 \item We developed a chat web app that executes queries on the RPi which contains a control server that manages the execution on a circuit and communication with the web app.
-\newpage
 \item We develop a multi-agent LLM framework that translates natural language commands into executable instructions for IoT devices, capable of handling complex, conditional logic without additional coding on the RPi.
 \item We showcase the system's real-world applicability through physical circuit implementations and provide insights into its limitations and potential scalability.
 \item We implement and evaluate the system demonstrating the feasibility and effectiveness of LLM-driven IoT control across various task complexities and user scenarios, including an evaluation mode with automated test generation and performance assessment.
@@ -98,8 +91,6 @@ Recent research has demonstrated the potential of NLP in IoT contexts. For insta
 
 The integration of LLMs represents a very significant advancement in NLP capabilities for IoT. Traditional NLP methods often struggle with context understanding and complex query interpretation, limitations that LLMs can overcome. LLMs offer improved natural language understanding, enabling more nuanced and context-aware interactions with IoT devices. For example, \citet{10.1145/3643505} demonstrated how LLMs can interpret ill-defined and under-specified commands in smart home environments, translating vague user intentions into specific device actions.
 
-
-
 The potential of LLMs in IoT extends far beyond simple command interpretation. They can enable more sophisticated applications such as predictive maintenance, anomaly detection, and personalized user experiences. \citet{10538107} explored the use of LLMs in smart policing systems, showcasing their potential in complex data analysis and pattern recognition. This application hints at the broader possibilities of LLMs in IoT, where they could be used to analyse and interpret vast amounts of sensor data, making IoT systems more intelligent and proactive.
 
 However, integrating LLMs into IoT systems also presents challenges, including privacy concerns, computational requirements, and the need for domain-specific training. Despite these challenges, the potential benefits of LLM-enhanced NLP in IoT are significant. As demonstrated by \citet{9808139}, natural language interfaces can greatly improve the usability of IoT platforms, allowing for more complex and nuanced interactions. By leveraging the advanced capabilities of LLMs, future IoT systems could offer unprecedented levels of intuitive control and intelligent automation, paving the way for more accessible and powerful IoT applications across various domains.
@@ -113,11 +104,18 @@ Recent studies have explored multi-modal chatbots in intelligent manufacturing s
 
 In the realm of human-robot interaction, researchers have developed task-oriented dialogue systems for industrial robots, addressing the lack of domain-specific discourse datasets and emphasizing user experience alongside task completion rates \cite{9869659}. These efforts have resulted in datasets like IRWoZ and frameworks such as ToD4IR, which integrate small talk concepts and human-to-human conversation strategies to support more natural and adaptable dialogue environments.
 
-
-
 The potential of LLMs in easing IoT oriented chatbot development has been demonstrated through large-scale models that can learn blended conversational skills when provided with appropriate training data and generation strategies \cite{roller-etal-2021-recipes}. These models have shown improvements in multi-turn dialogue engagement and human related measurements. Vega utilizes these frontiers within its multi-agent intelligent chatbot allowing it to interact with any IoT system and handle complex queries while maintaining a user-friendly interaction.
 
+\begin{figure*}[!t]
+  \centering
+  \includegraphics[width=\textwidth]{images/fig1.png}
+  \caption{\centering \textbf{Overall technical architecture of Vega (a) and alongside (b) a simple generalized example.}}
+  \label{fig1}
+\end{figure*}
+
+
 \section{Methodology}\label{sec:methodology}
+
 
 \subsection{Overall Architecture}
 The architecture of the Vega system follows key principles of software design to ensure clarity, scalability, maintainability, and robustness \cite{taylor2010software}. The system adopts a modular approach, dividing functionality into distinct components with specific purposes. This design promotes code reuse, facilitates testing, and enhances overall maintenance. The architecture also implements separation of concerns, where different aspects such as user interface (UI), core functionality, and data management are segregated into distinct layers, improving code organization and enabling independent development.
@@ -128,12 +126,7 @@ The web application consists of two primary submodules: the user interface (Vega
 
 The RPi module hosts a control server (VegaPi) responsible for parsing requests from the app logic and executing them on the physical circuit. An SQLite database \cite{sqlite} is used to store data extracted from the physical circuit. The physical circuit comprises input devices (sensors) and output devices (motors, displays, etc.) connected to the RPi's General Purpose Input/Output (GPIO) pins.
 
-\begin{figure*}[!h]
-  \centering
-  \includegraphics[width=\textwidth]{images/fig1.png}
-  \caption{\centering \textbf{Overall technical architecture of Vega (a) and alongside (b) a simple generalized example.}}
-  \label{fig1}
-  \end{figure*}
+
 
 A typical use case shown in Figure  \ref{fig1} (b) involves a user interacting with the web application interface, sending a natural language command to turn on a red light emitting diode (LED). The LLM interprets this command and sends the appropriate instruction to the RPi's control server. The server then relays the command to the physical circuit via GPIO pins which turns on the LED. Upon execution, the circuit sends feedback to the RPi, which is then communicated back to the user through the web application and the LLM.
 
@@ -148,7 +141,7 @@ The physical implementation of the Vega platform comprises a custom-designed cir
 % midskip=0pt)[width=\textwidth]{{images/fig2.png}}
 % { \textbf{Soldered physical circuit connected to the RPi }\label{fig2}}
 
-\begin{figure*}[!h]
+\begin{figure*}[!t]
   \centering
   \includegraphics[width=\textwidth]{images/fig2.png}
   \caption{\centering \textbf{Soldered physical circuit connected to the RPi}}
@@ -169,11 +162,20 @@ The versatility of this hardware setup, combined with the LLM-driven control sys
 
 \subsection{Raspberry Pi Design}
 
+
+
+The architecture of the RPi integration with the existing codebase is designed to enable seamless control and manipulation of the circuit without interfering with pre-existing logic. This approach leverages parallel computing concepts, utilizing processor cores and threads to execute specific logic concurrently with existing code \cite{wilkinson2005parallel}.
+
 % \Figure[t!](topskip=0pt, botskip=0pt,
 % midskip=0pt)[scale=0.4]{{images/fig3.png}}
 % { \centering \textbf{Architecture code design of the RPi including the control server and the database}\label{fig3}}
+\begin{figure*}[!t]
+  \centering
+  \includegraphics[scale=0.4]{images/fig3.png}
+  \caption{\centering \textbf{Architecture code design of the RPi including the control server and the database}}
+  \label{fig3}
+  \end{figure*}
 
-The architecture of the RPi integration with the existing codebase is designed to enable seamless control and manipulation of the circuit without interfering with pre-existing logic. This approach leverages parallel computing concepts, utilizing processor cores and threads to execute specific logic concurrently with existing code \cite{wilkinson2005parallel}.
 
 The system architecture, illustrated in Figure  \ref{fig3}, comprises two main threads: the control server thread and the database thread. The control server thread manages a Flask-based web framework, storing predefined functions for a set of circuit devices. These functions are exposed through a REST API, facilitating communication between different software systems over the internet \cite{Surwase2016RESTAM}. The database thread retrieves sensor data at two-second intervals, storing it in an SQLite database. This persistent storage solution ensures data preservation in the event of system failures, enabling data recovery, analytics, and statistical analysis. The stored data can be retrieved upon request and provided to the LLMs in the web application, enhancing system monitoring and diagnostic capabilities.
 
@@ -239,7 +241,7 @@ Table \ref{table1} presents the devices defined in the control server, categoriz
 % {\centering \textbf{Web app user interface implementation showcasing (a) Mobile Version alongside (b) Desktop Version}\label{fig4}}
 
 \begin{table}[!h]
-    \caption{\textbf{Defined functions on the control server, called by the LLM based on user input, executes on the RPi and processed on the web app}}
+    \caption{\textbf{Defined functions on the control server, called by the LLM based on user input and executes on the RPi}}
     \label{table2}
     \setlength{\tabcolsep}{3pt}
     \begin{tabular}{|p{80pt}|p{70pt}|p{85pt}|}
@@ -292,17 +294,28 @@ The communication flow between the web application and the RPi follows a request
 
 This architecture facilitates a modular and extensible system, allowing for easy addition of new devices and functions. It also provides a layer of abstraction between the physical hardware and the LLM-driven interface, enabling natural language control of IoT devices without requiring users to understand the underlying technical details. The integration of LLMs with this IoT control system represents a significant step towards more intuitive and accessible IoT interfaces, potentially broadening the application of IoT technologies across various domains \cite{taylor2010software}.
 
+
+\begin{figure*}[!t]
+  \centering
+  \includegraphics[width=\textwidth]{images/fig4.png}
+  \caption{\centering \textbf{Web app user interface implementation showcasing (a) Mobile Version alongside (b) Desktop Version}}
+  \label{fig4}
+  \end{figure*}
+
+
 \subsection{Web App User Interface}
 
 The web application forms the core of the Vega platform, initiating all LLM processing and circuit manipulation tasks. Its architecture is modular, separating the User Interface (VegaChat) from the App Logic (VegaAi). The User Interface shown in Figure \ref{fig4} comprises a Top Bar with RPi connection management and configuration options, and a Chat UI displaying LLM responses and user messages. A Chat History UI manages previous interactions. The App Logic includes Data Management, RPi Bridge, and LLM Agents components, handling data entities, RPi communication, and LLM processing respectively.
+
+
+The UI design prioritizes usability, drawing inspiration from established chatbot interfaces \cite{OpenAI_GPT}. It features a sidebar for chat history, a top bar for configurations, and a main chat area. An automated mode facilitates efficient testing for advanced users while maintaining simplicity for novices. The interface incorporates a Markdown renderer to appropriately display formatted text generated by the LLM.
+
+The platform supports various data types and formats to enhance user interaction. It can display GPS data as maps, sensor readings as plots, and camera module output as images. Additionally, it visualizes LLM-generated plans as flow charts. This versatility allows the interface to accommodate diverse IoT devices and sensors, presenting their data in intuitive, visual formats.
 
 % \Figure[t!](topskip=0pt, botskip=0pt,
 % midskip=0pt)[width=\textwidth]{{images/fig5.png}}
 % { \centering \textbf{Web app logic in action featuring LLM agents, application states and RPi connection}\label{fig5}}
 
-The UI design prioritizes usability, drawing inspiration from established chatbot interfaces \cite{OpenAI_GPT}. It features a sidebar for chat history, a top bar for configurations, and a main chat area. An automated mode facilitates efficient testing for advanced users while maintaining simplicity for novices. The interface incorporates a Markdown renderer to appropriately display formatted text generated by the LLM.
-
-The platform supports various data types and formats to enhance user interaction. It can display GPS data as maps, sensor readings as plots, and camera module output as images. Additionally, it visualizes LLM-generated plans as flow charts. This versatility allows the interface to accommodate diverse IoT devices and sensors, presenting their data in intuitive, visual formats.
 
 \subsection{Web App Logic}
 The Application Logic component serves as the core operational engine of the Vega system, managing communication with the RPi control server and integrating LLM's for NLP and command interpretation. This component acts as a bridge between external elements, orchestrating the flow of information and translating user input into appropriate actions within the system architecture \cite{taylor2010software}.
@@ -310,6 +323,14 @@ The Application Logic component serves as the core operational engine of the Veg
 By leveraging OpenAI's API, the application accesses LLM capabilities without the substantial computational overhead of local hosting \cite{kim2024llmemestimatinggpumemory}. This design choice simplifies and enhances the platform's accessibility and scalability, enabling its deployment across a wide range of devices, platforms and use cases in IoT and embedded systems development.
 
 To establish a connection between the web application and the RPi, the user provides the IP address and port number of the RPi running the control server. The web application then initiates concurrent API calls to fetch circuit functions and device information from the control server. Upon receiving responses, the connection state is updated, synchronizing the "Raspi Devices" and "Raspi Functions" states which are fed to the LLM.
+
+\begin{figure*}[!t]
+  \centering
+  \includegraphics[width=\textwidth]{images/fig5.png}
+  \caption{\centering \textbf{Web app logic in action featuring LLM agents, application states and RPi connection}}
+  \label{fig5}
+  \end{figure*}
+
 
 Figure \ref{fig5} illustrates the system's workflow, demonstrating how user commands are processed through various stages involving three main LLM agents: Chat, Planning, and Image. When a user inputs a natural language command (e.g., "turn on red LED and capture image"), the system follows these steps:
 
@@ -320,6 +341,14 @@ Figure \ref{fig5} illustrates the system's workflow, demonstrating how user comm
     \item For image data, the Stateless LLM Image Agent analyse and generates a description used by the LLM Chat Agent to execute subsequent functions and logic.
     \item Results are displayed on the web application's UI, providing feedback to the user.
 \end{enumerate}
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=0.99\columnwidth]{images/fig6.png}
+  \caption{\centering \textbf{Execution of the LLM Chat Agent}}
+  \label{fig6}
+  \end{figure}
+
 
 The LLM Chat Agent, as depicted in Figure \ref{fig6}, operates in two scenarios. In a normal chat scenario, it processes user input and generates a textual response. In a function call (provided by OpenAI) scenario, it recognizes the need for a hardware action and outputs a JSON-formatted function call for the RPi. The call is triggered using context in the user input, such as "turn on" or "capture".
 
@@ -332,6 +361,13 @@ The LLM Chat Agent, as depicted in Figure \ref{fig6}, operates in two scenarios.
 % { \textbf{Case study of complex commands in action}\label{fig7}}
 
 This approach of using LLM function call for command interpretation and execution offers several advantages over dynamic code generation methods. It enhances scalability and adaptability, allowing for easy integration of new sensors and data types without significant system modifications \cite{yang2023autogptonlinedecisionmaking}. Additionally, it improves system security and maintainability by limiting direct code execution on the RPi, instead relying on predefined functions interpreted by the LLM which prevents dynamic errors.
+
+\begin{figure*}[!t]
+  \centering
+  \includegraphics[width=\textwidth]{images/fig7.png}
+  \caption{\centering \textbf{Case study of complex commands in action}}
+  \label{fig7}
+  \end{figure*}
 
 \section{Experiment and Validation}\label{sec:experiment}
 
@@ -358,18 +394,42 @@ To rigorously assess the performance and robustness of the developed system, an 
 % \Figure[t!](topskip=0pt, botskip=0pt, midskip=0pt)[width=0.99\columnwidth]{{images/fig8.png}}
 % { \textbf{Evaluation Process integrated within Vega.}\label{fig8}}
 
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=0.99\columnwidth]{images/fig8.png}
+  \caption{\centering \textbf{Evaluation Process integrated within Vega.}}
+  \label{fig8}
+  \end{figure}
+
 The automated evaluation process, illustrated in Figure \ref{fig8}, involves supplying a predefined list of user messages to the application. An LLM agent, designated as the Test Generator, generated approximately 622 test messages. Each message had a complexity ranging from 0 to 1 in which 1 indicates a multi-step conditional message. Concurrently, the input parameters of the Chat Agent LLM model such temperature and Top P \cite{rum2024setting} were varied. The evaluation process mirrored the standard execution flow of the application, with a notable deviation occurring post-message processing on the circuit. At this point, the entire chat conversation was transmitted to an LLM Evaluation Agent, tasked with assessing the Chat Agent LLM's response. 
 
 This approach allowed for a nuanced understanding of the system's performance under different conditions, providing insights into potential areas for optimization. The performance of the Chat Agent LLM was evaluated quantitatively based on multiple metrics, each measured on a scale from 0 to 100. The speed metric assessed response generation time, while the efficiency metric measured the degree to which the LLM avoided invoking unnecessary functions. The success rate indicated the overall rate at which the LLM successfully executed the requested action specified in the input message prompt.
 
 \subsection{Result Analysis}
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=0.99\columnwidth]{images/fig9.png}
+  \caption{\centering \textbf{Evaluation metrics for the functions defined in Table \ref{table2}.}}
+  \label{fig9}
+  \end{figure}
+
 Figure \ref{fig9} illustrates the success rate and speed for each function defined in Table \ref{table2}, with the temperature parameter set to 0.7. The "set\_fan" command exhibited the lowest success rate, likely due to the relay's inherent switching delay causing errors when processing frequent state change requests. This hardware limitation may lead to errors after function execution.  
 
 % \Figure[h!](topskip=0pt, botskip=0pt,
 % midskip=0pt)[width=0.99\columnwidth]{{images/fig9.png}}
 % { \textbf{Evaluation metrics for the functions defined in Table \ref{table2}.}\label{fig9}}
 
+
+
 Conversely, the "print\_lcd" command achieved the highest success rate, demonstrating the LLM's proficiency with textual arguments. The "set\_led" function demonstrated the highest execution speed, attributable to its simplicity, minimal LLM processing requirements, efficient software GPIO port toggling, and basic LED control hardware. In contrast, the "get\_recorded\_sensor\_data" function exhibited the lowest speed, primarily due to performance limitations of Python when retrieving and processing data from the database.
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[scale=0.32]{images/fig10.png}
+  \caption{\centering \textbf{Message complexity against the number of functions called per message.}}
+  \label{fig10}
+  \end{figure}
 
 % \Figure[t!](topskip=0pt, botskip=0pt,
 % midskip=0pt)[scale=0.32]{{images/fig10.png}}
@@ -383,6 +443,13 @@ Beyond 0.6, function calls decrease as complexity increases, mimicking the perfo
 % midskip=0pt)[width=0.99\columnwidth]{{images/fig11.png}}
 % { \textbf{Heatmap for success rate against message complexity and temperature of the LLM.}\label{fig11}}
 
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=0.99\columnwidth]{images/fig11.png}
+  \caption{\centering \textbf{Heatmap for success rate against message complexity and temperature of the LLM.}}
+  \label{fig11}
+  \end{figure}
+
 Figure \ref{fig11} represents a heatmap which is a graphical representation of 3-dimensional data in this case, our heatmap shows the interplay between message complexity, LLM's temperature, and the resulting success rates of the LLM in executing IoT control tasks. The heatmap reveals a complex relationship between these variables, with higher success rates, (bright yellow areas) concentrated in regions of moderate to high temperatures (0.7 to 1.0) and moderate complexity (0.4 to 0.6). This pattern suggests that the LLM performs optimally when given some degree of freedom to interpret and respond to moderately complex commands. The high temperature in this optimal zone likely allows the model to explore a wider range of potential interpretations and solutions, which is particularly beneficial when dealing with the nuanced and context-dependent nature of IoT control scenarios \cite{10315791}. 
 
 Conversely, lower success rates are observed in regions of high complexity (0.8 to 1.0) combined with low to medium temperatures (0.1 to 0.6). This pattern indicates that when faced with highly complex instructions, a more constrained or deterministic approach (lower temperature) is less effective. Such scenarios might involve intricate sequences of operations or complex conditional logic that benefit from the model's ability to consider a broader range of possibilities. This finding aligns with the observations of \citet{kannan2024smartllmsmartmultiagentrobot}, who noted that LLMs perform better in complex multi-agent robot task planning scenarios when given more freedom to explore diverse solutions. 
@@ -395,11 +462,25 @@ Understanding these performance characteristics allows for strategic tuning of t
 % midskip=0pt)[scale=0.38]{{images/fig12.png}}
 % { \textbf{Message complexity against all evaluation metrics and most importantly the success rate.}\label{fig12}}
 
+\begin{figure}[!h]
+  \centering
+  \includegraphics[scale=0.38]{images/fig12.png}
+  \caption{\centering \textbf{Heatmap for success rate against message complexity and temperature of the LLM.}}
+  \label{fig12}
+  \end{figure}
+
 Figure \ref{fig12} illustrates the relationship between message complexity and evaluation metrics with the temperature parameter set to 0.5. As complexity increases, the system's performance decrease. The system achieves peak success rate and efficiency at a complexity level around 0.6, where the system can handle sophisticated user requests while maintaining high reliability. A notable shift occurs at a complexity of 0.8, where the success rate diverges from efficiency and speed. This divergence is attributed to the LLM correctly executing functions but struggling with conditional and sequential order. Such behaviours underscore the challenges in maintaining coherent task execution as complexity scales up, even when individual components are processed accurately. Beyond a complexity of 0.9, all three metrics exhibit an upward trend, indicating the model's capability to handle highly complex tasks while maintaining high success rates albeit with potential trade-offs in efficiency and speed. These findings highlight the delicate balance required in system design: while moderate complexity yields optimal overall performance, the system can adapt to highly complex inputs at the cost of reduced efficiency. This insight is crucial for tailoring the Vega system to different use cases, from simple smart home controls to complex industrial applications, where the balance between task complexity and system performance may vary based on specific requirements and operational contexts. 
 
 % \Figure[h!](topskip=0pt, botskip=0pt,
 % midskip=0pt)[width=0.99\columnwidth]{{images/fig13.png}}
 % { \textbf{Heatmap for success rate against message complexity and Top P of the LLM.}\label{fig13}}
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=0.99\columnwidth]{images/fig13.png}
+  \caption{\centering \textbf{Heatmap for success rate against message complexity and Top P of the LLM.}}
+  \label{fig13}
+  \end{figure}
 
 Figure \ref{fig13}, provides additional insights into the relationship between message complexity and Top P. Top P is an LLM parameter limits token selection to the most probable choices that sum to a specified probability threshold \cite{rum2024setting}. The heatmap reveals that high success rates (85-90\%) occur at low complexity (0.1-0.3) with mid-to-high Top P (0.6-0.9) and at moderate complexity (0.4-0.6) with mid-to-high Top P (0.7-0.9). This pattern is consistent with the findings of \citet{Singh2023}, who observed that programmatic prompts with well-defined action specifications lead to more successful plan generation in situated robot environments.
 
@@ -421,7 +502,24 @@ The experimental results provide valuable insights into the performance characte
 % midskip=0pt)[scale=0.4]{{images/fig14.png}}
 % { \textbf{What types of errors occurred throughout testing.}\label{fig14}}
 
+\begin{figure}[!h]
+  \centering
+  \includegraphics[scale=0.4]{images/fig14.png}
+  \caption{\centering \textbf{What types of errors occurred throughout testing.}}
+  \label{fig14}
+  \end{figure}
+
+
 Figure \ref{fig14}, titled "Error Occurrences," shows a pie chart of errors in the Vega platform. LLM-related issues dominate, with wrong format and incorrect logic making up 59\% of errors, highlighting the challenges of LLM integration and the need for better prompt engineering or parsing. The error distribution reflects the platform's complexity, where OpenAI timeout errors (14\%) suggest potential API-related performance bottlenecks, and web app runtime errors (18\%) point to user interface stability issues. The lower rate of RPi device errors (9\%) indicates reliable hardware, with most challenges residing in software and AI integration.
+
+
+\begin{figure}[!h]
+  \centering
+  \includegraphics[scale=0.4]{images/fig15.png}
+  \caption{\centering \textbf{Success rate of different tones of the same message.}}
+  \label{fig15}
+  \end{figure}
+
 
 Figure \ref{fig15} illustrates the success rate of message interpretation by the system across three message length categories: minimal (73.0\%), normal (68.0\%), and descriptive (84.0\%). Notably, the descriptive messages achieve the highest success rate, indicating that more detailed inputs significantly improve performance. Interestingly, minimal messages outperform normal ones, recommending that concise commands may reduce ambiguity. The lower success rate for normal messages implies a potential trade-off between brevity and specificity, emphasizing that either highly detailed or very concise communication may be optimal. 
 
